# ros_visual

./: .gitignore  License  README.md
chroma/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
chroma/config/: parameters.yaml
chroma/include/: chroma.hpp
chroma/launch/: chroma.xml  chroma.xml~  config.xml~  node.xml  node.xml~
chroma/src/: chroma.cpp
classifier/: CMakeLists.txt  package.xml
classifier/config/: parameters.yaml
classifier/include/: 4classSit2Stand  4classSit2StandMEANS  FinalFull2MEANS  FullFInalModelMEANS  GB_B1_3000MEANS  GB_Classifier_Radio  GB_Classifier_RadioMEANS
classifier/msg/: Event.msg
classifier/src/: classifier.py
decision_making/: CMakeLists.txt  package.xml
decision_making/config/: parameters.yaml
decision_making/include/: decision.hpp
decision_making/launch/: decision.xml
decision_making/msg/: Event.msg  FusionMsg.msg
decision_making/src/: decision.cpp
depth/: CMakeLists.txt  CMakeLists.txt~  package.xml
depth/config/: parameters.yaml
depth/include/: depth.hpp
depth/launch/: depth.xml  depth.xml~  node.xml  node.xml~
depth/src/: depth.cpp
fusion/: CMakeLists.txt  CMakeLists.txt~  package.xml
fusion/config/: parameters.yaml  parameters.yaml~
fusion/include/: fusion.hpp  utility.hpp
fusion/launch/: fusion.xml  fusion.xml~
fusion/msg/: Position.msg
fusion/src/: fusion.cpp  utility.cpp
ros_visual/: CMakeLists.txt  package.xml
ros_visual/launch/: config.launch  config.xml  ros_visual.launch  ros_visual_classifier.launch
ros_visual/sessions/16-05-2016_15:39:50/: session.csv
ros_visual/sessions/16-05-2016_15:53:35/: session.csv
ros_visual_msgs/: CMakeLists.txt  package.xml
ros_visual_msgs/include/: fusion.hpp  utility.hpp
ros_visual_msgs/launch/: fusion.xml  node.xml  node.xml~
ros_visual_msgs/msg/: Box.msg
ros_visual_msgs/src/: fusion.cpp
vision/: CMakeCache.txt  CMakeLists.txt  package.xml
vision/include/: vision.hpp
vision/src/: depth_methods.cpp  vision.cpp
